--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Import libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from pandas_profiling import ProfileReport\n",
     "import missingno as msno\n",
     "from fancyimpute import KNN, IterativeImputer\n",
     "import seaborn as sns"
