--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -1024,7 +1024,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#convert time to seconds since midnight\n",
+    "def settime(time):\n",
+    "    split = time.split(':')\n",
+    "    tempsplit = split[2].split(' ')\n",
+    "    if int(split[0]) != 12:\n",
+    "        seconds = int(split[0])*3600 + int(split[1])*60 + int(tempsplit[0])\n",
+    "    elif tempsplit[1] == 'PM' and int(split[0]) == 12:\n",
+    "        seconds = int(split[0])*3600 + int(split[1])*60 + int(tempsplit[0])\n",
+    "    else:\n",
+    "        seconds = int(split[1])*60 + int(tempsplit[0])\n",
+    "    if tempsplit[1] == 'PM' and int(split[0]) != 12:\n",
+    "        seconds += 43200\n",
+    "    return seconds\n",
+    "train[\"Pickup - Time\"] = train[\"Pickup - Time\"].apply(settime)\n",
+    "\n",
+    "sns.scatterplot(data = train.sort_values(by = 'Pickup - Time'), x = \"Pickup - Time\", y = \"Time from Pickup to Arrival\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1528,7 +1545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
