--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -1779,7 +1779,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Changes were lost but clean pickle was made"
+   ]
   }
  ],
  "metadata": {
