fixed pickle again

--- a/josh_viz.ipynb
+++ b/josh_viz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1390,7 @@
        "4584     24.300000            2    25200.0  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1439,11 +1439,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_pickle('clean_training.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Rider_id            object\n",
+       "No_Of_Orders         int64\n",
+       "Age                  int64\n",
+       "Average_Rating     float64\n",
+       "No_of_Ratings        int64\n",
+       "Platform_type     category\n",
+       "is_business           bool\n",
+       "Pickup_weekday    category\n",
+       "Pickup_time          int64\n",
+       "Distance             int64\n",
+       "Temperature        float64\n",
+       "Travel_time          int64\n",
+       "kmperhour          float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    21201.000000\n",
+       "mean       249.305379\n",
+       "std       1905.297307\n",
+       "min          0.920245\n",
+       "25%         16.463415\n",
+       "50%         23.064602\n",
+       "75%         30.288462\n",
+       "max      61200.000000\n",
+       "Name: kmperhour, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.kmperhour.describe()"
    ]
   },
   {
