--- a/model_submits.ipynb
+++ b/model_submits.ipynb
@@ -26,6 +26,256 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7068, 25)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = pd.read_csv(\"Test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order No</th>\n",
+       "      <th>User Id</th>\n",
+       "      <th>Vehicle Type</th>\n",
+       "      <th>Platform Type</th>\n",
+       "      <th>Personal or Business</th>\n",
+       "      <th>Placement - Day of Month</th>\n",
+       "      <th>Placement - Weekday (Mo = 1)</th>\n",
+       "      <th>Placement - Time</th>\n",
+       "      <th>Confirmation - Day of Month</th>\n",
+       "      <th>Confirmation - Weekday (Mo = 1)</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Pickup - Weekday (Mo = 1)</th>\n",
+       "      <th>Pickup - Time</th>\n",
+       "      <th>Distance (KM)</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Precipitation in millimeters</th>\n",
+       "      <th>Pickup Lat</th>\n",
+       "      <th>Pickup Long</th>\n",
+       "      <th>Destination Lat</th>\n",
+       "      <th>Destination Long</th>\n",
+       "      <th>Rider Id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Order_No_19248</td>\n",
+       "      <td>User_Id_3355</td>\n",
+       "      <td>Bike</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Business</td>\n",
+       "      <td>27</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4:44:10 PM</td>\n",
+       "      <td>27</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5:06:47 PM</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.333275</td>\n",
+       "      <td>36.870815</td>\n",
+       "      <td>-1.305249</td>\n",
+       "      <td>36.822390</td>\n",
+       "      <td>Rider_Id_192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Order_No_12736</td>\n",
+       "      <td>User_Id_3647</td>\n",
+       "      <td>Bike</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Business</td>\n",
+       "      <td>17</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12:57:35 PM</td>\n",
+       "      <td>17</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1:25:37 PM</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.272639</td>\n",
+       "      <td>36.794723</td>\n",
+       "      <td>-1.277007</td>\n",
+       "      <td>36.823907</td>\n",
+       "      <td>Rider_Id_868</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Order_No_768</td>\n",
+       "      <td>User_Id_2154</td>\n",
+       "      <td>Bike</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Business</td>\n",
+       "      <td>27</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11:08:14 AM</td>\n",
+       "      <td>27</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11:57:54 AM</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.290894</td>\n",
+       "      <td>36.822971</td>\n",
+       "      <td>-1.276574</td>\n",
+       "      <td>36.851365</td>\n",
+       "      <td>Rider_Id_26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Order_No_15332</td>\n",
+       "      <td>User_Id_2910</td>\n",
+       "      <td>Bike</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Business</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1:51:35 PM</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2:16:52 PM</td>\n",
+       "      <td>5</td>\n",
+       "      <td>24.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.290503</td>\n",
+       "      <td>36.809646</td>\n",
+       "      <td>-1.303382</td>\n",
+       "      <td>36.790658</td>\n",
+       "      <td>Rider_Id_685</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Order_No_21373</td>\n",
+       "      <td>User_Id_1205</td>\n",
+       "      <td>Bike</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Business</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11:30:28 AM</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11:56:04 AM</td>\n",
+       "      <td>6</td>\n",
+       "      <td>24.4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.281081</td>\n",
+       "      <td>36.814423</td>\n",
+       "      <td>-1.266467</td>\n",
+       "      <td>36.792161</td>\n",
+       "      <td>Rider_Id_858</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Order No       User Id Vehicle Type  Platform Type  \\\n",
+       "0  Order_No_19248  User_Id_3355         Bike              3   \n",
+       "1  Order_No_12736  User_Id_3647         Bike              3   \n",
+       "2    Order_No_768  User_Id_2154         Bike              3   \n",
+       "3  Order_No_15332  User_Id_2910         Bike              3   \n",
+       "4  Order_No_21373  User_Id_1205         Bike              3   \n",
+       "\n",
+       "  Personal or Business  Placement - Day of Month  \\\n",
+       "0             Business                        27   \n",
+       "1             Business                        17   \n",
+       "2             Business                        27   \n",
+       "3             Business                        17   \n",
+       "4             Business                        11   \n",
+       "\n",
+       "   Placement - Weekday (Mo = 1) Placement - Time  Confirmation - Day of Month  \\\n",
+       "0                             3       4:44:10 PM                           27   \n",
+       "1                             5      12:57:35 PM                           17   \n",
+       "2                             4      11:08:14 AM                           27   \n",
+       "3                             1       1:51:35 PM                           17   \n",
+       "4                             2      11:30:28 AM                           11   \n",
+       "\n",
+       "   Confirmation - Weekday (Mo = 1)  ... Pickup - Weekday (Mo = 1)  \\\n",
+       "0                                3  ...                         3   \n",
+       "1                                5  ...                         5   \n",
+       "2                                4  ...                         4   \n",
+       "3                                1  ...                         1   \n",
+       "4                                2  ...                         2   \n",
+       "\n",
+       "   Pickup - Time  Distance (KM) Temperature  Precipitation in millimeters  \\\n",
+       "0     5:06:47 PM              8         NaN                           NaN   \n",
+       "1     1:25:37 PM              5         NaN                           NaN   \n",
+       "2    11:57:54 AM              5        22.8                           NaN   \n",
+       "3     2:16:52 PM              5        24.5                           NaN   \n",
+       "4    11:56:04 AM              6        24.4                           NaN   \n",
+       "\n",
+       "   Pickup Lat Pickup Long  Destination Lat  Destination Long      Rider Id  \n",
+       "0   -1.333275   36.870815        -1.305249         36.822390  Rider_Id_192  \n",
+       "1   -1.272639   36.794723        -1.277007         36.823907  Rider_Id_868  \n",
+       "2   -1.290894   36.822971        -1.276574         36.851365   Rider_Id_26  \n",
+       "3   -1.290503   36.809646        -1.303382         36.790658  Rider_Id_685  \n",
+       "4   -1.281081   36.814423        -1.266467         36.792161  Rider_Id_858  \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [],
@@ -172,6 +422,26 @@
     "y_pred = model.predict(X_test)\n",
     "y_pred = pd.DataFrame(y_pred, columns=[\"Time from Pickup to Arrival\"])\n",
     "y_pred.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7068, 1)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred.shape"
    ]
   },
   {
@@ -342,11 +612,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7068, 2)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seven_feat_linear_submit.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "seven_feat_linear_submit.to_csv(\"seven_feat_linear_submit.csv\")"
+    "seven_feat_linear_submit.to_csv(\"seven_feat_linear_submit.csv\", index=False)"
    ]
   },
   {
